8275703: System.loadLibrary fails on Big Sur for libraries hidden from filesystem

Reviewed-by: phh
Backport-of: 309acbf0e86a0d248294503fccc7a936fa0a846e